--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Sea stories'
 - !lcsh 'Fiction'
+- GITenberg
 title: 'The Ghost Ship: A Mystery of the Sea'
 url: http://www.gutenberg.org/ebooks/21087
